Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.5.02-dev
 + Added option to config.yml for Chimaera Wings to stop using bed spawn points
 + Added option to config.yml to let non-tools in hand count as unarmed
 = Fixed bug where no Mining XP was granted when Flux Mining was successful
 = Fixed bug where MobHealthbarTypes were not saved between server restarts
 ! Changed Flux Mining mechanics. In order to use the ability, you need to infuse a pickaxe with furnace powers first.
 ! Scoreboard tips are only shown a couple of times to the player, instead of once per login session
 ! Changed Archery distance multiplier to be configurable

Version 1.5.01
 + Added new child skill; Salvage
 + Added UUID support!
 + Added SQL connection pooling and async loading!
 + Added the long awaited Diminished Returns feature
 + Added new feature to Herbalism. Instantly-regrown crops are protected from being broken for 1 second
 + Added option to config.yml to show the /mcstats scoreboard automatically after logging in
 + Added option to config.yml for Alchemy. Skills.Alchemy.Prevent_Hopper_Transfer_Bottles
 + Added option to config.yml for Scoreboards, display "Ability" instead of ability names on the scoreboards
 + Added options to experience.yml for Dirt and Sand variations
 + Added support for `MATERIAL|data` format in treasures.yml
 + Added API to experience events to get XP gain reason
 + Added API to check if an entity is bleeding
 + Added API to ExperienceAPI to get the amount of XP needed for a level
 + Added API class SkillAPI used to get a list of valid skill names
 + Added API events for hardcore features, McMMOPlayerPreDeathPenaltyEvent, McMMOPlayerStatLossEvent and McMMOPlayerVampirismEvent
 + Added API to ExperienceAPI to specify if XP can be shared
 + Added options to tools.yml and armor.yml config files to set a pretty repair material name