@@ -37,6 +37,8 @@ Experience_Formula:
     # Experience gained from mobs not naturally spawned will get multiplied by this value. 0 by default.
     Mobspawners:
         Multiplier: 0
+    Breeding:
+        Multiplier: 1.0
 
     # Experience gained will get divided by these values. 1.0 by default, 2.0 means two times less XP gained.
     Modifier:
