@@ -10,6 +10,7 @@ Key:
 Version 1.5.02-dev
  + Added option to config.yml for Chimaera Wings to stop using bed spawn points
  + Added option to config.yml to let non-tools in hand count as unarmed
+ + Added option to experience.yml to control XP gained by killing bred animals
  = Fixed bug where no Mining XP was granted when Flux Mining was successful
  = Fixed bug where MobHealthbarTypes were not saved between server restarts
  ! Changed Flux Mining mechanics. In order to use the ability, you need to infuse a pickaxe with furnace powers first.
